# graphics-final

./: .gitattributes  .gitmodules  CMakeLists.txt  main.cpp
contrib/: CMakeLists.txt
data/clips/: HDR10Plus_PA_DTSX.mkv
hdr-rs/: CMakeLists.txt
include/hdr/: hdr.hpp
src/: main.cpp
test/: CMakeLists.txt  image-hdr.cpp
